Fix for horizontal scrollbar with bootstrap css

--- a/app/assets/stylesheets/ruby_prof/rails/home.css
+++ b/app/assets/stylesheets/ruby_prof/rails/home.css
@@ -1,3 +1,7 @@
+.layout {
+  padding: 0 15px;
+}
+
 .content {
   margin: 0 auto;
   padding: 0 2em;
